Fixed Spacing Below navbar in Home

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     position: relative; /*check this*/
     /*display: flex;
     justify-content: center;*/
-    margin-bottom: 40px;
+    margin-bottom: 70px;
 }
 
 .navbar .nav-list {
@@ -217,7 +217,7 @@ body{
     display: flex;
     justify-content: space-between;
     padding: 0px;
-    margin-top: -40px;
+    margin-top: -70px;
 }
 
 .left-column {
